[project]
name = "wfp-hdx-rainfall-example"
version = "0.1.0"
description = "WFP Rainfall Dataset example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.3.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "hdx-python-api>=6.4.5",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "mapclassify>=2.10.0",
    "marimo>=0.14.11",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "ruff>=0.12.4",
    "sqlglot>=27.0.0",
]
